--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.3",
     "react": "^19.2.3",
     "@google/genai": "^1.35.0",
-    "@supabase/supabase-js": "^2.90.1"
+    "@supabase/supabase-js": "^2.90.1",
+    "html-to-image": "^1.11.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
